column name change pBonferroni to pSlidingWindows

--- a/vignettes/DEWSeq.Rmd
+++ b/vignettes/DEWSeq.Rmd
@@ -555,7 +555,7 @@ resultWindows
 You might be interested to correct for multiple hypothesis testing with IHW.
 
 ```{r IHW multiple hypothesis correction, eval = TRUE, warning = FALSE}
-resultWindows[,"p_adj_IHW"] <- adj_pvalues(ihw(pBonferroni ~ baseMean, 
+resultWindows[,"p_adj_IHW"] <- adj_pvalues(ihw(pSlidingWindows ~ baseMean, 
                      data = resultWindows,
                      alpha = 0.05,
                      nfolds = 10))
